Module 3, Lab02, Working with routes, Task2, customize controller route
from [Route("api/[controller]")]
    to [Route("api/inventories")]

--- a/WebAPI/Module3/Custom Route/WebServer/.vscode/tasks.json
+++ b/WebAPI/Module3/Custom Route/WebServer/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}\\WebServer.csproj"
+                "${workspaceRoot}/WebServer.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
